--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <header>
-        <h1>Marioclub</h1>
+        <h1>Mubaclub</h1>
     </header>
     <section class="banner">
         <img src="/img/banner.jpg" alt="Marioclub banner">
         <div class="welcome">
-            <h2>welcome to <br><span>Marioclub</span></h2>
+            <h2>welcome to <br><span>Mubaclub</span></h2>
         </div>
     </section>
     <nav class="main-nav">
@@ -38,7 +38,7 @@
         </article>
         <ul class="images">
             <li><img src="img/thumb-1.png" alt="mario thumb-1"></li>
-            <li><img src="img/thumb2.jpg" alt="mario thumb2"></li>
+            <li><img src="img/thumb2.png" alt="mario thumb2"></li>
         </ul>
     </main>
     <section class="join">
@@ -54,7 +54,7 @@
     </section>
     <footer>
         <p class="copyright">
-            copyright 2024
+            Copyright 2024 Mubarek
         </p>
     </footer>
 </body>
